--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@mantine/hooks": "^7.12.2",
 		"@nextui-org/autocomplete": "^2.1.5",
 		"@nextui-org/button": "^2.0.37",
+		"@nextui-org/calendar": "^2.0.12",
 		"@nextui-org/checkbox": "^2.1.4",
 		"@nextui-org/divider": "^2.0.31",
 		"@nextui-org/react": "^2.4.6",
@@ -26,6 +27,7 @@
 		"react-data-table-component": "^7.6.2",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
+		"react-pin-input": "^1.3.1",
 		"sass": "^1.77.8"
 	},
 	"devDependencies": {
